--- a/src/assets/scss/containers/app/nav/patients/NavPatientListItem.scss
+++ b/src/assets/scss/containers/app/nav/patients/NavPatientListItem.scss
@@ -3,7 +3,7 @@
  */
 @import '../../../../common.scss';
 
-.base-button.patient {
+.base-button.nav-patient-list-item {
     width: 100%;
     height: 48px;
     padding: 4px 8px;
