--- a/src/assets/scss/containers/app/modules/patientList/PatientListFilter.scss
+++ b/src/assets/scss/containers/app/modules/patientList/PatientListFilter.scss
@@ -28,7 +28,8 @@
             }
         }
 
-        .group-select {
+        .group-select,
+        .status-select {
             float: left;
             width: 120px;
             margin-right: 20px;
