--- a/src/assets/scss/customized/MaterialTextField.scss
+++ b/src/assets/scss/customized/MaterialTextField.scss
@@ -1,7 +1,14 @@
+/**
+ * @file MaterialTextField.scss
+ */
 @import '../common.scss';
 
 .material-text-field {
     background: transparent !important;
+
+    .material-provider-label {
+        color: $theme-label !important;
+    }
 
     .text-field-placeholder,
     .text-field-input {
@@ -15,7 +22,7 @@
     }
 
     &.focused {
-        .material-text-field-label {
+        .material-provider-label {
             color: $theme-highlight !important;
         }
     }
