--- a/src/assets/scss/components/Msg.scss
+++ b/src/assets/scss/components/Msg.scss
@@ -1,3 +1,6 @@
+/**
+ * @file Msg.scss
+ */
 @import '../common.scss';
 
 @mixin msg-theme($bg-color, $border-color, $icon-color) {
@@ -41,12 +44,15 @@
     &.theme-info {
         @include msg-theme(#edf9ff, #cdedfc, $theme-info);
     }
+
     &.theme-success {
         @include msg-theme(#f5fbf2, #e3f6db, $theme-success);
     }
+
     &.theme-warning {
         @include msg-theme(#fff8e9, #f9e3b6, $theme-warning);
     }
+
     &.theme-error {
         @include msg-theme(#fff0e9, #fcd9c7, $theme-error);
     }
