--- a/src/assets/scss/customized/MaterialDateTimePicker.scss
+++ b/src/assets/scss/customized/MaterialDateTimePicker.scss
@@ -5,8 +5,8 @@
 
 .material-date-time-picker {
 
-    .material-date-picker-text-field-label {
-        color: $theme-field !important;
+    .material-provider-label {
+        color: $theme-label !important;
     }
 
     .text-field-input,
@@ -15,7 +15,7 @@
     }
 
     &.focused {
-        .material-date-picker-text-field-label {
+        .material-provider-label {
             color: $theme-highlight !important;
         }
     }
