--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -4,6 +4,7 @@
 @import '~alcedo-ui/Theme/default.scss';
 
 // theme
+$theme-bg: #fafafa;
 $theme-info: #2db7f5;
 $theme-success: #87d068;
 $theme-warning: #fa0;
