--- a/src/assets/scss/containers/app/nav/patients/NavPatientPopover.scss
+++ b/src/assets/scss/containers/app/nav/patients/NavPatientPopover.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: $theme-secondary;
+    //background: $theme-secondary;
 
     .icon-button.nav-patient-popover-item {
         border-radius: $theme-border-radius;
