--- a/src/components/FieldSet/index.scss
+++ b/src/components/FieldSet/index.scss
@@ -1,7 +1,7 @@
 /**
  * @file FieldSet.scss
  */
-@import '../common.scss';
+@import '../../assets/scss/common';
 
 .field-set {
     margin-top: 24px;
