--- a/src/components/Msg/index.scss
+++ b/src/components/Msg/index.scss
@@ -1,7 +1,7 @@
 /**
  * @file Msg.scss
  */
-@import '../common.scss';
+@import '../../assets/scss/common';
 
 @mixin msg-theme($bg-color, $border-color, $icon-color) {
     background-color: $bg-color;
