--- a/src/components/StepAction/index.scss
+++ b/src/components/StepAction/index.scss
@@ -1,7 +1,7 @@
 /**
  * @file StepAction.scss
  */
-@import '../common.scss';
+@import '../../assets/scss/common';
 
 .step-action {
     @include float-fix;
