--- a/src/components/module/loading/ModuleLoading/index.scss
+++ b/src/components/module/loading/ModuleLoading/index.scss
@@ -1,7 +1,7 @@
 /**
  * @file ModuleLoading.scss
  */
-@import '../common.scss';
+@import '../../../../assets/scss/common';
 
 .module-loading {
     display: block;
