--- a/src/components/FieldSet.scss
+++ b/src/components/FieldSet.scss
@@ -1,7 +1,7 @@
 /**
  * @file FieldSet.scss
  */
-@import '../../assets/scss/common';
+@import '../assets/scss/common';
 
 .field-set {
     margin-top: 24px;
