--- a/src/components/module/loading/ModuleLoading.scss
+++ b/src/components/module/loading/ModuleLoading.scss
@@ -1,7 +1,7 @@
 /**
  * @file ModuleLoading.scss
  */
-@import '../../../../assets/scss/common';
+@import '../../../assets/scss/common';
 
 .module-loading {
     display: block;
