--- a/src/containers/app/modules/editPatient/patientBaseInfo/AddPatientDialog.scss
+++ b/src/containers/app/modules/editPatient/patientBaseInfo/AddPatientDialog.scss
@@ -1,7 +1,7 @@
 /**
  * @file AddPatientDialog.scss
  */
-@import '../../../../common.scss';
+@import '../../../../../assets/scss/common.scss';
 
 .paper.dialog.add-patient-dialog {
     width: 720px;
