--- a/src/containers/app/modules/patientList/PatientList.scss
+++ b/src/containers/app/modules/patientList/PatientList.scss
@@ -1,7 +1,7 @@
 /**
  * @file PatientList.scss
  */
-@import '../../../../common.scss';
+@import '../../../../assets/scss/common.scss';
 
 .patient-list .nav-no-patient {
     position: absolute;
