--- a/src/containers/app/nav/bar/NavBar.scss
+++ b/src/containers/app/nav/bar/NavBar.scss
@@ -1,4 +1,7 @@
-@import '../../../../common.scss';
+/**
+ * @file NavBar.scss
+ */
+@import '../../../../assets/scss/common.scss';
 
 .nav-bar {
     display: flex;
