--- a/src/containers/app/nav/bar/NavBarTop.scss
+++ b/src/containers/app/nav/bar/NavBarTop.scss
@@ -1,4 +1,7 @@
-@import '../../../../common.scss';
+/**
+ * @file NavBarTop.scss
+ */
+@import '../../../../assets/scss/common.scss';
 
 .nav-bar-top {
     display: flex;
@@ -38,12 +41,12 @@
             }
 
             .logo {
-                background-image: url("../../../../../../assets/images/logo.png");
+                background-image: url("../../../../assets/images/logo.png");
             }
 
             .logo-animated {
                 opacity: 0;
-                background-image: url("../../../../../../assets/images/logo-animated.png");
+                background-image: url("../../../../assets/images/logo-animated.png");
                 animation: logo-spin 1s linear infinite;
             }
 
