--- a/src/containers/app/nav/bar/NavSearch.scss
+++ b/src/containers/app/nav/bar/NavSearch.scss
@@ -1,4 +1,7 @@
-@import '../../../../common.scss';
+/**
+ * @file NavSearch.scss
+ */
+@import '../../../../assets/scss/common.scss';
 
 .nav-search-wrapper {
     z-index: 1;
