--- a/src/containers/app/nav/patients/NavNoPatient.scss
+++ b/src/containers/app/nav/patients/NavNoPatient.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavNoPatient.scss
  */
-@import '../../../../common.scss';
+@import '../../../../assets/scss/common.scss';
 
 .nav-no-patient {
     text-align: center;
