--- a/src/containers/app/nav/patients/NavPatients.scss
+++ b/src/containers/app/nav/patients/NavPatients.scss
@@ -1,9 +1,9 @@
 /**
  * @file NavPatients.scss
  */
-@import '../../../../common.scss';
+@import '../../../../assets/scss/common.scss';
 
-.nav-patient {
+.nav-patients {
     flex: 1;
     box-sizing: border-box;
     height: 100%;
