--- a/src/containers/app/modules/editPatient/EditPatient.scss
+++ b/src/containers/app/modules/editPatient/EditPatient.scss
@@ -1,7 +1,7 @@
 /**
  * @file EditPatient.scss
  */
-@import '../../../../common.scss';
+@import '../../../../assets/scss/common.scss';
 
 .edit-patient {
     position: relative;
