--- a/src/containers/app/modules/patientList/PatientListFilter.scss
+++ b/src/containers/app/modules/patientList/PatientListFilter.scss
@@ -1,7 +1,7 @@
 /**
  * @file PatientListFilter.scss
  */
-@import '../../../../common.scss';
+@import '../../../../assets/scss/common.scss';
 
 .patient-list-filter {
     @include float-fix;
