--- a/src/containers/app/nav/bar/NavBarBottom.scss
+++ b/src/containers/app/nav/bar/NavBarBottom.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavBarBottom.scss
  */
-@import '../../../../common.scss';
+@import '../../../../assets/scss/common.scss';
 
 .nav-bar-bottom {
     display: flex;
