--- a/src/containers/app/modules/editPatient/observal/ObservalForm.scss
+++ b/src/containers/app/modules/editPatient/observal/ObservalForm.scss
@@ -1,7 +1,7 @@
 /**
  * @file ObservalForm.scss
  */
-@import '../../../../../common.scss';
+@import '../../../../../assets/scss/common.scss';
 
 .observal-data-form {
 
