--- a/src/containers/app/modules/editPatient/analgesia/AnalgesiaTable.scss
+++ b/src/containers/app/modules/editPatient/analgesia/AnalgesiaTable.scss
@@ -1,7 +1,7 @@
 /**
  * @file AnalgesiaTable.scss
  */
-@import '../../../../../common.scss';
+@import '../../../../../assets/scss/common.scss';
 
 .analgesia-data-table-scroller {
     overflow-x: auto;
