--- a/src/containers/app/modules/editPatient/patientInfo/PatientForm.scss
+++ b/src/containers/app/modules/editPatient/patientInfo/PatientForm.scss
@@ -1,7 +1,7 @@
 /**
  * @file PatientForm.scss
  */
-@import '../../../../../common.scss';
+@import '../../../../../assets/scss/common.scss';
 
 .patient-form {
 
