--- a/src/components/StepAction.scss
+++ b/src/components/StepAction.scss
@@ -1,7 +1,7 @@
 /**
  * @file StepAction.scss
  */
-@import '../assets/scss/common';
+@import 'scss/common.scss';
 
 .step-action {
     @include float-fix;
