--- a/src/containers/app/modules/editPatient/analgesia/AnalgesiaData.scss
+++ b/src/containers/app/modules/editPatient/analgesia/AnalgesiaData.scss
@@ -1,7 +1,7 @@
 /**
  * @file AnalgesiaData.scss
  */
-@import '../../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .analgesia-data {
 
