--- a/src/containers/app/nav/bar/NavBarTop.scss
+++ b/src/containers/app/nav/bar/NavBarTop.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavBarTop.scss
  */
-@import '../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .nav-bar-top {
     display: flex;
