--- a/src/containers/app/nav/patients/NavPatientListItem.scss
+++ b/src/containers/app/nav/patients/NavPatientListItem.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavPatientList.scss
  */
-@import '../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .base-button.nav-patient-list-item {
     width: 100%;
