--- a/src/containers/app/nav/patients/NavPatients.scss
+++ b/src/containers/app/nav/patients/NavPatients.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavPatients.scss
  */
-@import '../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .nav-patients {
     flex: 1;
