--- a/src/containers/app/nav/title/NavTitle.scss
+++ b/src/containers/app/nav/title/NavTitle.scss
@@ -1,4 +1,7 @@
-@import '../../../../assets/scss/common';
+/**
+ * @file NavTitle.scss
+ */
+@import 'scss/common.scss';
 
 .nav-title {
     color: $theme-field-hover;
