--- a/src/containers/app/modules/patientList/PatientListTable.scss
+++ b/src/containers/app/modules/patientList/PatientListTable.scss
@@ -1,7 +1,7 @@
 /**
  * @file PatientListTable.scss
  */
-@import '../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .patient-list-table {
 
