--- a/src/containers/app/nav/bar/NavBar.scss
+++ b/src/containers/app/nav/bar/NavBar.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavBar.scss
  */
-@import '../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .nav-bar {
     display: flex;
