--- a/src/containers/app/nav/bar/NavSearch.scss
+++ b/src/containers/app/nav/bar/NavSearch.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavSearch.scss
  */
-@import '../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .nav-search-wrapper {
     z-index: 1;
