--- a/src/containers/app/nav/patients/NavPatientList.scss
+++ b/src/containers/app/nav/patients/NavPatientList.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavPatientList.scss
  */
-@import '../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .nav-patient-list {
     flex: 1;
