--- a/src/containers/app/nav/patients/NavPatientListWrapper.scss
+++ b/src/containers/app/nav/patients/NavPatientListWrapper.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavPatientListWrapper.scss
  */
-@import '../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .nav-patient-list-wrapper {
     display: flex;
