--- a/src/containers/app/nav/patients/NavPatientsPopover.scss
+++ b/src/containers/app/nav/patients/NavPatientsPopover.scss
@@ -1,7 +1,7 @@
 /**
  * @file NavPatientsPopover.scss
  */
-@import '../../../../assets/scss/common.scss';
+@import 'scss/common.scss';
 
 .nav-patients-popover-wrapper {
     display: flex;
