--- a/src/components/module/table/ModuleTable.scss
+++ b/src/components/module/table/ModuleTable.scss
@@ -15,7 +15,7 @@
             table {
                 thead tr th {
                     border: none;
-                    background: linear-gradient(180deg, $theme-light-grey, $theme-dark-grey) !important;
+                    //background: linear-gradient(180deg, $theme-light-grey, $theme-dark-grey) !important;
                     filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr=#fafafa, endColorStr=#f4f4f4) !important;
                     white-space: pre-wrap;
 
