--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -41,6 +41,25 @@ $nav-z-index: 89;
 $minWidth: 320px;
 $appMenuPortableWidth: .8;
 
+@mixin invisible {
+    position: absolute;
+    font: inherit;
+    background: transparent;
+    z-index: -1;
+    opacity: 0;
+    -webkit-appearance: none;
+    appearance: none;
+    resize: none;
+    outline: none;
+    overflow: hidden;
+    padding: 0;
+    width: 0;
+    height: 0;
+    cursor: none;
+    pointer-events: none;
+    white-space: nowrap;
+}
+
 @mixin float-fix {
     &::before, &::after {
         display: table;
@@ -49,6 +68,12 @@ $appMenuPortableWidth: .8;
     &::after {
         clear: both;
     }
+}
+
+@mixin text-nowrap {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 @mixin shadow-inset($depth) {
