--- a/src/assets/scss/customized/RaisedButton.scss
+++ b/src/assets/scss/customized/RaisedButton.scss
@@ -3,6 +3,7 @@
  */
 @import '../common.scss';
 
-.raised-button {
-    box-shadow: none !important;
+.base-button.raised-button {
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.06);
+    border-radius: 12px;
 }
