--- a/src/components/module/ModuleCard.scss
+++ b/src/components/module/ModuleCard.scss
@@ -4,8 +4,8 @@
 @import 'scss/common.scss';
 
 .module-card {
-    border: 1px solid #e5e5e5;
-    border-radius: $theme-border-radius;
-    box-shadow: 1px 1px 4px transparentize(#ccc, .5);
+    border: 1px solid rgba(0, 0, 0, 0.06);
+    border-radius: 24px;
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.06) !important;
     overflow: hidden;
 }
