--- a/src/containers/app/nav/title/NavTitle.scss
+++ b/src/containers/app/nav/title/NavTitle.scss
@@ -4,6 +4,7 @@
 @import 'scss/common.scss';
 
 .nav-title {
+    flex: 0 0 36px;
     color: $theme-field-hover;
     line-height: 36px;
     margin-bottom: 40px;
