--- a/src/assets/scss/customized/MaterialDropdownSelect.scss
+++ b/src/assets/scss/customized/MaterialDropdownSelect.scss
@@ -16,3 +16,11 @@
         }
     }
 }
+
+.popup.dropdown-popup.dropdown-select-popup {
+    border-radius: 8px !important;
+
+    .list-item {
+        border-radius: 8px !important;
+    }
+}
