--- a/src/components/module/table/actions/ModuleTableActions.scss
+++ b/src/components/module/table/actions/ModuleTableActions.scss
@@ -7,8 +7,8 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    height: 32px;
-    margin-bottom: 8px;
+    height: 56px;
+    padding: 0 8px 16px;
 
     .module-table-actions-extra-separator {
         height: 16px;
