--- a/src/components/module/table/actions/ModuleTableRowSizeSelector.scss
+++ b/src/components/module/table/actions/ModuleTableRowSizeSelector.scss
@@ -1,22 +1,7 @@
 /**
  * @file ModuleTableRowSizeSelector.scss
  */
-@import 'scss/common.scss';
 
-.module-table-row-size-selector-pop {
-    z-index: $dialog-z-index + 1;
-
-    .popup-content {
-        border: 1px solid $theme-border;
-
-        .list .list-item {
-            padding: 0 8px;
-
-            .button-icon-left {
-                font-size: 16px;
-                margin-right: 8px;
-                color: $theme-label;
-            }
-        }
-    }
+.module-table-row-size-selector .rotate-180 {
+    transform: rotate(180deg);
 }
