--- a/src/components/module/table/actions/ModuleTableAction.scss
+++ b/src/components/module/table/actions/ModuleTableAction.scss
@@ -9,9 +9,10 @@
 
 .icon-button.module-table-action {
     width: auto;
-    min-width: 32px;
-    height: 32px;
-    padding: 0 6px;
+    min-width: 40px;
+    height: 40px;
+    border-radius: 8px;
+    margin-left: 16px;
 
     .button-icon {
         font-size: 20px;
@@ -20,5 +21,9 @@
     .base-button-value {
         padding: 0 12px;
         font-weight: 600;
+    }
+
+    &:hover {
+        background: $theme-secondary;
     }
 }
